# TrafficSense

./: .gitignore  README.md
Backend/: .env.example  app.py  database.py  pyproject.toml  requirements.txt
Backend/models/: cascade_model.py  ml_model.py  sql_models.py
Backend/services/: impact_service.py  learning_service.py  prediction_service.py  recommendation_service.py
Backend/utils/: data_loader.py  feature_engineer.py  helpers.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  config.js  index.css
frontend/src/components/: Badge.css  Badge.jsx  KpiCard.css  KpiCard.jsx  Modal.css  Modal.jsx  PaginationBar.css  PaginationBar.jsx  Sidebar.css  Sidebar.jsx  SvgChart.css  SvgChart.jsx
frontend/src/context/: Toast.css  ToastContext.jsx  TrafficContext.jsx
frontend/src/pages/: CascadeMap.css  CascadeMap.jsx  Dashboard.css  Dashboard.jsx  EventInput.css  EventInput.jsx  Landing.css  Landing.jsx  Learning.css  Learning.jsx  Prediction.css  Prediction.jsx  Simulator.css  Simulator.jsx
frontend/src/services/: api.js
