[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "httpx>=0.28.1",
    "joblib==1.3.2",
    "networkx==3.2.1",
    "numpy==1.26.2",
    "pandas==2.1.3",
    "pydantic>=2.13.4",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "scikit-learn==1.3.2",
    "sqlalchemy==2.0.23",
    "uvicorn[standard]==0.24.0",
]
